--- a/bootstrap/css/custom.css
+++ b/bootstrap/css/custom.css
@@ -6,16 +6,13 @@
 }
 
 .info_color	{
-	color:#5bc0de;
+	color:#ffffff;
 	font-size:18px;
 	font-family: "Source Sans Pro",Arial,sans-serif;
 	font-weight: bold;
 }
-.hijau	{
-	color:#00a651;
-	font-size:18px;
-	font-family: "Source Sans Pro",Arial,sans-serif;
-	line-height:25px;
+.putih{
+	color:#ffffff;
 	font-weight: bold;
 }
 
